--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-groq_api_key = "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"
+GROQ_API_KEY = "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"
