--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-streamlit
-pandas
-matplotlib
-groq
-langchain
-langchain-groq
-python-dotenv
-chardet
+langchain==0.2.14
+langchain-community==0.2.12
+langchain-core==0.2.33
+langchain-groq==0.1.9
+langchain-text-splitters==0.2.2
+groq==0.9.0
+ollama==0.3.1
+pdfplumber==0.11.3
+pandas==2.2.2
+matplotlib==3.9.2
+python-dotenv==1.0.1
+streamlit==1.37.1
+chardet==5.2.0  
+pillow==10.4.0  
+pypdfium2==4.30.0  
