--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,5 @@ streamlit==1.37.1
 chardet==5.2.0  
 pillow==10.4.0  
 pypdfium2==4.30.0  
+unstructured[local-inference]==0.7.11
+python-magic==0.4.27
