--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ pillow==10.4.0
 pypdfium2==4.30.0  
 unstructured[local-inference]==0.7.11
 python-magic==0.4.27
+torch==2.0.1
+gtts==2.3.2
+transformers==4.32.0
