--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-python-dotenv==1.0.1
-streamlit==1.37.1
-torch==2.4.0
-gtts==2.5.3
-transformers==4.44.2
+streamlit==1.27.2
+transformers==4.32.0
+torch==2.0.1
+gtts==2.3.2
+pandas==2.1.0
+matplotlib==3.7.3
+langchain==0.0.304
+openai==0.27.8
+chromadb==0.4.3
+unstructured==0.10.7
+python-dotenv==1.0.0
