--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
-streamlit==1.27.2
-transformers==4.32.0
-torch==2.0.1
-gtts==2.3.2
-pandas==2.1.0
-matplotlib==3.7.3
-langchain==0.0.304
-openai==0.27.8
-chromadb==0.4.3
-unstructured==0.10.7
-python-dotenv==1.0.0
+langchain==0.2.16
+langchain-community==0.2.12
+langchain-core==0.2.33
+langchain-groq==0.1.9
+langchain-text-splitters==0.2.2
+groq==0.9.0
+ollama==0.3.1
+pdfplumber==0.11.3
+pandas==2.2.2
+matplotlib==3.9.2
+python-dotenv==1.0.1
+streamlit==1.37.1
+chardet==5.2.0
+pillow==10.4.0
+pypdfium2==4.30.0
+unstructured[local-inference]==0.7.11
+python-magic==0.4.27
